--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>曹海涛</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>严振杰</title>
+    <meta name="Keywords"
+          content="严振杰,严振杰的主页,严振杰的博客,严振杰CSDN,AndPermission,Album,SwipeRecyclerView,AndServer"/>
+    <meta name="Description"
+          content="他说正直刚烈，嫉恶如仇，且有勇有谋，文武双全。"/>
+
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link href="./assets/bundle.css" rel="stylesheet">
+    <script>
+        (function () {
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https') {
+                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+            }
+            else {
+                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp, s);
+        })();
+    </script>
+    <style>
+        .comment {
+            width: 95%;
+            margin: 0 auto;
+        }
+
+        @media (min-width: 768px) {
+            .comment {
+                width: 60%;
+                margin: 0 auto;
+            }
+        }
+    </style>
 </head>
 <body>
-我叫曹海涛，软件工程师，英文名Yolanda，尤兰达，他们叫我达哥。123
+<!--PC和WAP自适应版-->
+<div id="SOHUCS" ></div> 
+<script type="text/javascript"> 
+(function(){ 
+var appid = 'cyttNE5PN'; 
+var conf = 'prod_f7a5c54e7c029d1328fe43d99eed649b'; 
+var width = window.innerWidth || document.documentElement.clientWidth; 
+if (width < 960) { 
+window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); 
+</script>
+
+<div style="display: none;">
+    <script src="http://s11.cnzz.com/z_stat.php?id=1260557333&web_id=1260557333"></script>
+</div>
 </body>
 </html>
