--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>严振杰</title>
+    <title>曹海涛</title>
     <meta name="Keywords"
           content="严振杰,严振杰的主页,严振杰的博客,严振杰CSDN,AndPermission,Album,SwipeRecyclerView,AndServer"/>
     <meta name="Description"
@@ -41,6 +41,9 @@
     </style>
 </head>
 <body>
+<div id="app" align="center"></div>
+<script src="./assets/bundle.js"></script>
+<script src="./assets/mouse.js"></script>
 <!--PC和WAP自适应版-->
 <div id="SOHUCS" ></div> 
 <script type="text/javascript"> 
