--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 <script src="./assets/bundle.js"></script>
 <script src="./assets/mouse.js"></script>
 <!--PC和WAP自适应版-->
-<div id="SOHUCS" ></div> 
+<div id="comment" class="comment" align="center">
+    <div id="SOHUCS"></div>
+</div> 
 <script type="text/javascript"> 
 (function(){ 
 var appid = 'cyttNE5PN'; 
