--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 <div id="app" align="center"></div>
 <script src="./assets/bundle.js"></script>
 <script src="./assets/mouse.js"></script>
+
+<!-- 打赏  -->
+<div id="cyReward" role="cylabs" data-use="reward"></div>
+<script type="text/javascript" charset="utf-8" src="https://changyan.itc.cn/js/lib/jquery.js"></script>
+<script type="text/javascript" charset="utf-8" src="https://changyan.sohu.com/js/changyan.labs.https.js?appid=cyttNE5PN"></script>
+<!-- 评论表情  -->
+<div id="cyEmoji" role="cylabs" data-use="emoji"></div> 
+<script type="text/javascript" charset="utf-8" src="https://changyan.itc.cn/js/lib/jquery.js"></script>
+<script type="text/javascript" charset="utf-8" src="https://changyan.sohu.com/js/changyan.labs.https.js?appid=cyttNE5PN"></script>
 <!--PC和WAP自适应版-->
 <div id="comment" class="comment" align="center">
     <div id="SOHUCS"></div>
