--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 <script src="./assets/mouse.js"></script>
 
 <!-- 打赏  -->
-<div id="cyReward" role="cylabs" data-use="reward"></div>
+<div id="cyReward" role="cylabs" data-use="reward" align="center"></div>
 <!-- 评论表情  -->
-<div id="cyEmoji" role="cylabs" data-use="emoji"></div>
+<div id="cyEmoji" role="cylabs" data-use="emoji" align="center"></div>
 <div id="comment" class="comment" align="center">
     <div id="SOHUCS"></div>
 </div> 
