--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 
 <!-- 打赏  -->
 <div id="cyReward" role="cylabs" data-use="reward" align="center"></div>
-<!-- 评论表情  -->
-<div id="cyEmoji" role="cylabs" data-use="emoji" align="center"></div>
+<!--PC和WAP自适应版-->  
 <div id="comment" class="comment" align="center">
     <div id="SOHUCS"></div>
 </div> 
@@ -63,8 +62,11 @@ window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="tex
 
 <div style="display: none;">
     <script src="http://s11.cnzz.com/z_stat.php?id=1260557333&web_id=1260557333"></script>
-    <script type="text/javascript" charset="utf-8" src="https://changyan.itc.cn/js/lib/jquery.js"></script>
-    <script type="text/javascript" charset="utf-8" src="https://changyan.sohu.com/js/changyan.labs.https.js?appid=cyttNE5PN"></script><!--PC和WAP自适应版-->
+    
 </div>
+<!-- 评论表情  -->
+<div id="cyEmoji" role="cylabs" data-use="emoji" align="center"></div>
+<script type="text/javascript" charset="utf-8" src="https://changyan.itc.cn/js/lib/jquery.js"></script>
+    <script type="text/javascript" charset="utf-8" src="https://changyan.sohu.com/js/changyan.labs.https.js?appid=cyttNE5PN"></script>  
 </body>
 </html>
