--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>曹海涛</title>
     <meta name="Keywords"
-          content="严振杰,严振杰的主页,严振杰的博客,严振杰CSDN,AndPermission,Album,SwipeRecyclerView,AndServer"/>
+          content="曹海涛,我的主页,我的博客,我的CSDN,AndPermission,Album,SwipeRecyclerView,AndServer"/>
     <meta name="Description"
           content="他说正直刚烈，嫉恶如仇，且有勇有谋，文武双全。"/>
 
@@ -59,14 +59,15 @@ var width = window.innerWidth || document.documentElement.clientWidth;
 if (width < 960) { 
 window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); 
 </script>
-
+<!-- 热门评论  -->   
+<div id="cyReping" role="cylabs" data-use="reping"></div>
 <div style="display: none;">
     <script src="http://s11.cnzz.com/z_stat.php?id=1260557333&web_id=1260557333"></script>
     
 </div>
 <!-- 评论表情  -->
 <div id="cyEmoji" role="cylabs" data-use="emoji" align="center"></div>
-<script type="text/javascript" charset="utf-8" src="https://changyan.itc.cn/js/lib/jquery.js"></script>
+    <script type="text/javascript" charset="utf-8" src="https://changyan.itc.cn/js/lib/jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="https://changyan.sohu.com/js/changyan.labs.https.js?appid=cyttNE5PN"></script>  
 </body>
 </html>
