--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         }
         #ball {
             height:300px;
-            width:100px;
-            float:right;
+            width:300px;
+            float:left;
         }
 }
     </style>
