--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 <!-- 访客统计 -->
 <div id="ball">
-    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?
-                                    i=07g4sw2r9vn&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async">
-    </script>    
+    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=0t0b9qaa0w5&amp;m=0&amp;
+                                        c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;s=180" async="async">
+    </script> 
 </div>
     
 <div id="app" align="center"></div>
