--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 <!-- 访客统计 -->
 <div id="ball">
-    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=0t0b9qaa0w5&amp;m=0&amp;
-                                        c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;s=180" async="async">
-    </script> 
+    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/8.js?i=0anky58wgr1&amp;
+                                        m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async">
+    </script>
 </div>
     
 <div id="app" align="center"></div>
