--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 <!-- 访客统计 -->
 <div id="ball">
-    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/8.js?i=0anky58wgr1&amp;
-                                        m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async">
+    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/8.js?i=0ousf32v7j5&amp;
+                                        m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;s=340" async="async">
     </script>
 </div>
     
