--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         #ball {
             height:0px;
             width:0px;
-            float:left;
+            float:right;
         }
 }
     </style>
@@ -57,7 +57,7 @@
     
 <div id="app" align="center"></div>
 <script src="./assets/bundle.js"></script>
-<script src="./assets/mouse.js"></script>
+<!--   <script src="./assets/mouse.js"></script> -->
 
 <!-- 打赏  -->
 <div id="cyReward" role="cylabs" data-use="reward" align="center"></div>
